WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289003
[JSC] Fix SequesteredArenaMalloc when compiling synchronously
https://bugs.webkit.org/show_bug.cgi?id=289003
Summary
[JSC] Fix SequesteredArenaMalloc when compiling synchronously
Dan Hecht
Reported
2025-03-03 14:05:28 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-03 14:07:18 PST
<
rdar://problem/146051685
>
Dan Hecht
Comment 2
2025-03-03 14:12:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41803
EWS
Comment 3
2025-03-03 16:56:38 PST
Committed
291538@main
(c5983a8c511e): <
https://commits.webkit.org/291538@main
> Reviewed commits have been landed. Closing PR #41803 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug