[JSC] Fix SequesteredArenaMalloc when compiling synchronously https://bugs.webkit.org/show_bug.cgi?id=289003 rdar://146051685

Reviewed by Yusuke Suzuki and Keith Miller.

The asynchronous compile paths have an ArenaLifetime
in scope, but the synchronous paths did not.

* Source/JavaScriptCore/jit/BaselineJITPlan.cpp:
(JSC::BaselineJITPlan::compileSync):
* Source/JavaScriptCore/jit/JITWorklist.cpp:
(JSC::JITWorklist::enqueue):

Canonical link: https://commits.webkit.org/291538@main